--- a/server/eclipse-project/pom.xml
+++ b/server/eclipse-project/pom.xml
@@ -95,6 +95,24 @@
 					</execution>
 				</executions>
 			</plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>3.2.1</version>
+        <configuration>
+          <failBuildOnCVSS>8</failBuildOnCVSS>
+          <suppressionFiles>${project.basedir}/project_configuration/owasp-dependency-check-suppression.xml</suppressionFiles>
+        </configuration>
+        <executions>
+          <execution>
+            <id>owasp</id>
+	          <phase>verify</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
@@ -196,7 +214,7 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-core</artifactId>
-			<version>3.1.12</version>
+			<version>3.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
